--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -388,7 +387,7 @@
     get_data2();
     function login(){
       document.getElementById('id01').style.display='block';
-      document.getElementById('login_if').src = 'http://127.0.0.1:8888/v1/Login/GetQRcode';
+      document.getElementById('login_if').src = '/v1/Login/GetQRcode';
     }
     function loginC(){
       document.getElementById('id01').style.display='none';
