--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
     </footer>
     <div id="id01" class="w3-modal">
       <div class="w3-modal-content">
-        <div class="w3-container">
+        <div class="w3-container w3-center">
           <span onclick="loginC();" class="w3-button w3-display-topright">&times;</span>
           <p>登陆完成关闭即可</p>
-          <iframe id="login_if" src="" frameborder="0" width="300px" height="300px"></iframe>
+          <iframe id="login_if" src="" frameborder="0" width="150px" height="155px"></iframe>
         </div>
       </div>
     </div>
